--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Touhou</h1>
+			<h1>snow halation</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Dodge the circles with you mouse
+		    Click the Circles
 	    </footer>
 	</body>
 </html>
