--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click the Circles
+		    Dodge the circles with your mouse
 	    </footer>
 	</body>
 </html>
